🐛: set map z-index to fix chat modal display
thx @lunar for bug report and fix

--- a/static/styles.less
+++ b/static/styles.less
@@ -6,6 +6,10 @@
 @cluster-md-size: 60px;
 @cluster-lg-size: 70px;
 
+#map {
+	z-index: 0;
+}
+
 .leaflet-container {
 	font: inherit;
 }
